# sqlite-url-shortner

./: Cargo.toml  Dockerfile  README.md  flake.nix  result
.github/workflows/: release.yml
container/static/: style.css
container/templates/: deleted.html.j2  detail.html.j2  index.html.j2
src/: db.rs  main.rs  util.rs
static/: style.css
static/twind/: observe.js  shim.js  style-vendorizer.js  twind.js
templates/: deleted.html.j2  detail.html.j2
